Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15575

ReactOS does not install into other drive letter than C

    XMLWordPrintable

Details

    • 0.4.11-dev-491-gc83ac76 was still fine ... 0.4.11-dev-500-gbbb04c4 is affected already

    Description

      When you have a multi partitioned hard disk, and the first partition is occupied by other OS, in Windows the behavior is to choose the next letter starting from D, this was also the ReactOS behavior, but since few months this is broken, ReactOS only choose C: as install drive and assigns the D letter to the first partition.

      My VM setup has a linux partition in hd0,0 and ReactOS is to be installed always into hd0,1 but ReactOS recognizes itself as installed on C.

      I am performing a regtesting, but seems to be introduced in 1a173df or a near rev.

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              Julcar Julcar
              Votes:
              13 Vote for this issue
              Watchers:
              14 Start watching this issue

              Dates

                Created:
                Updated: